--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ deploy:
 
   # trying new things
 #deploy:
+# new
  #  provider: npm 
   # email: "kgoku98@gmail.com"
    #api_key: "4bcf2159-1f36-4313-a03b-26c3a07fc1f7"
