--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   - npm run dist
   - pwd
   - ls -ltr .
-  - zip -r archive.zip ./release-builds
+  - zip -r archive.zip ./dist
   # - git add ./release-builds
   # - git commit -m "Build successful 1.0.0"
   # - git push origin master
