--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,7 @@ install:
   - npm install -g electron electron-packager electron-builder
 script:
   - npm run dist
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] || [[ "$TRAVIS_OS_NAME" == "osx" ]]; then pwd; ls -ltr .; zip -r archive.zip ./dist; fi
-  - if [[ "$TRAVIS_OS_NAME" == "windows"]]; then jar -cMf archive.zip ./dist fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] || [[ "$TRAVIS_OS_NAME" == "osx" ]]; then pwd; ls -ltr .; zip -r archive.zip ./dist; else jar -cMf archive.zip ./dist fi
   # - git add ./release-builds
   # - git commit -m "Build successful 1.0.0"
   # - git push origin master
