--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ install:
 script:
   - npm run dist
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]] || [[ "$TRAVIS_OS_NAME" == "osx" ]]; then pwd; ls -ltr .; zip -r archive.zip ./dist; fi
-  - if [[ "$TRAVIS_OS_NAME" == "windows"]] && 7z a -t7z archive.zip ./dist fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows"]] &&  Cscript zip.vbs archive.zip ./dist fi
   # jar -cMf archive.zip ./dist fi
   # - git add ./release-builds
   # - git commit -m "Build successful 1.0.0"
