--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-#dist: trusty # needs Ubuntu Trusty
-# Note: if you switch to sudo: false, you'll need to launch chrome with --no-sandbox.
-# See https://github.com/travis-ci/travis-ci/issues/8836
 sudo: required
 
 language: node_js
@@ -9,7 +6,6 @@ node_js:
 os: 
  - linux
  - osx
- - windows  
 # before_install:
 # - brew install git-lfs
 
@@ -26,8 +22,9 @@ install:
   - npm install -g electron electron-packager electron-builder
 script:
   - npm run dist
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] || [[ "$TRAVIS_OS_NAME" == "osx" ]]; then pwd; ls -ltr .; zip -r archive.zip ./dist; fi
-  - if [[ "$TRAVIS_OS_NAME" == "windows"]] || COMPRESS ./dist fi
+  - pwd
+  - ls -ltr .
+  - zip -r archive.zip ./dist
   # - git add ./release-builds
   # - git commit -m "Build successful 1.0.0"
   # - git push origin master
