--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@
 # See https://github.com/travis-ci/travis-ci/issues/8836
 sudo: required
 
-language: node_js
-node_js:
-  - "7"
+# language: node_js
+# node_js:
+  # - "7"
 os: 
  - linux
  - osx
@@ -18,7 +18,8 @@ os:
 
 script:
   - echo $TRAVIS_OS_NAME
-        
+  - if: os == linux
+    echo " hello i am linux"
 # install:
   
   # - git config --global user.name "kanna12"
