--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ os:
 
 script:
   - echo $TRAVIS_OS_NAME
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] 
-    echo " hello i am linux"
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]] ;
+    echo " hello i am linux";
     fi
 # install:
   
