--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,18 @@ node_js:
   - "7"
 os: 
  - linux
+   services: docker
+   language: generic
  - osx
-# before_install:
-# - brew install git-lfs
 
-# before_script:
-# - git lfs pull
+cache:
+  directories:
+    - node_modules
+    - $HOME/.cache/electron
+    - $HOME/.cache/electron-builder
 
+before_cache:
+  - rm -rf $HOME/.cache/electron-builder/wine
 
 install:
   
@@ -26,10 +31,22 @@ install:
   - git tag $TRAVIS_TAG
   
 script:
-  - npm run dist
-  - pwd
-  - ls -ltr .
-  - zip -r archive.zip ./dist
+  - |
+    if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+      docker run --rm \
+        --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
+        -v ${PWD}:/project \
+        -v ~/.cache/electron:/root/.cache/electron \
+        -v ~/.cache/electron-builder:/root/.cache/electron-builder \
+        electronuserland/builder:wine \
+        /bin/bash -c "npm install && npm run dist && ls -ltr ."
+    else
+      npm run dist
+      pwd
+      ls -ltr .
+      zip -r archive.zip ./dist
+    fi
+
   
 deploy:
   provider: releases
