--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,19 @@ sudo: required
 language: node_js
 node_js:
   - "7"
-os: 
- - linux
- - osx
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode9.4
+      language: node_js
+      node_js: "10"
+      env:
+        - ELECTRON_CACHE=$HOME/.cache/electron
+        - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
+
+    - os: linux
+      services: docker
+      language: generic
 
 cache:
   directories:
