--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,9 @@ install:
   - npm install -g electron electron-packager electron-builder
   - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
   - git tag $TRAVIS_TAG
-  - sudo apt-get install wine
+  - sudo add-apt-repository ppa:ubuntu-wine/ppa
+  - sudo apt-get update
+  - sudo apt-get install wine1.8
   - wine --version
   
 script:
