--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
   - sudo apt-key add Release.key
   - sudo apt-add-repository 'https://dl.winehq.org/wine-builds/ubuntu/'
   - sudo apt-get update
-  - sudo apt-get install wine1.8
+  - sudo apt-get install wine
   - wine --version
   
 script:
