--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,8 @@ install:
   - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
   - git tag $TRAVIS_TAG
   - sudo dpkg --add-architecture i386
-  - wget -nc https://dl.winehq.org/wine-builds/winehq.key
-  - sudo apt-key add winehq.key
+  - wget -nc https://dl.winehq.org/wine-builds/winehq.key && sudo apt-key add winehq.key && sudo apt update -y
   - sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ trusty main'
-  - sudo apt update
   - sudo apt install --install-recommends winehq-stable
   - wine --version
   
