--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,13 @@ install:
   # - wget -nc https://dl.winehq.org/wine-builds/winehq.key && sudo apt-key add winehq.key && sudo apt update -y
   # - sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ xenial main'
   # - sudo apt install --install-recommends winehq-stable
-  - sudo apt-get install wine
+  - wget https://dl.winehq.org/wine/source/4.0/wine-4.0.tar.xz
+  - tar -xvf wine-4.0.tar.xz
+  - cd wine-4.0/
+  - sudo ./configure 
+  - sudo ./configure --enable-win64
+  - sudo make && sudo make install
+  # - sudo apt-get install wine
   - wine --version
   
 script:
