--- a/.travis.yml
+++ b/.travis.yml
@@ -30,16 +30,17 @@ install:
   - npm install -g electron electron-packager electron-builder
   - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
   - git tag $TRAVIS_TAG
-  # - sudo dpkg --add-architecture i386
-  # - wget -nc https://dl.winehq.org/wine-builds/winehq.key && sudo apt-key add winehq.key && sudo apt update -y
-  # - sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ xenial main'
-  # - sudo apt install --install-recommends winehq-stable
-  - wget https://dl.winehq.org/wine/source/4.0/wine-4.0.tar.xz
-  - tar -xvf wine-4.0.tar.xz
-  - cd wine-4.0/
-  - sudo ./configure 
-  # - sudo ./configure --enable-win64
-  - sudo make && sudo make install
+  - sudo dpkg --add-architecture i386
+  - wget -nc https://dl.winehq.org/wine-builds/winehq.key && sudo apt-key add winehq.key && sudo apt update -y
+  - sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ xenial main'
+  - sudo apt install aptitude
+  - sudo aptitude install winehq-stable
+  # - wget https://dl.winehq.org/wine/source/4.0/wine-4.0.tar.xz
+  # - tar -xvf wine-4.0.tar.xz
+  # - cd wine-4.0/
+  # - sudo ./configure 
+  # # - sudo ./configure --enable-win64
+  # - sudo make && sudo make install
   # - sudo apt-get install wine
   - wine --version
   
