--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ install:
   - wget -qO - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -
   - sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ xenial main'
   - sudo apt-get install aptitude
-  - sudo aptitude install winehq-stable
+  - sudo aptitude install --instal-recommends winehq-stable
   # - wget https://dl.winehq.org/wine/source/4.0/wine-4.0.tar.xz
   # - tar -xvf wine-4.0.tar.xz
   # - cd wine-4.0/
