--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ install:
   # - wget -nc https://dl.winehq.org/wine-builds/winehq.key && sudo apt-key add winehq.key && sudo apt update -y
   - wget -qO - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -
   - sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ xenial main'
-  - sudo apt-get update && sudo apt-get upgrade
+  - sudo apt-get update 
   - sudo apt-get install --instal-recommends winehq-stable
   # - wget https://dl.winehq.org/wine/source/4.0/wine-4.0.tar.xz
   # - tar -xvf wine-4.0.tar.xz
