--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ node_js:
 
 os: 
  - linux
- # - osx
+ - osx
 
 dist: xenial
 
@@ -30,26 +30,16 @@ install:
   - npm install -g electron electron-packager electron-builder
   - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
   - git tag $TRAVIS_TAG
-  - sudo dpkg --add-architecture i386
-  # - wget -nc https://dl.winehq.org/wine-builds/winehq.key && sudo apt-key add winehq.key && sudo apt update -y
-  - wget -qO - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -
-  - sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ xenial main'
-  - sudo apt-get update 
-  - sudo apt-get install --install-recommends winehq-stable
-  # - wget https://dl.winehq.org/wine/source/4.0/wine-4.0.tar.xz
-  # - tar -xvf wine-4.0.tar.xz
-  # - cd wine-4.0/
-  # - sudo ./configure 
-  # # - sudo ./configure --enable-win64
-  # - sudo make && sudo make install
-  # - sudo apt-get install wine
-  - wine --version
   
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo dpkg --add-architecture i386wget -qO - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -; sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ xenial main'; sudo apt-get update; sudo apt-get install --install-recommends winehq-stable; wine --version; fi
+  
+   
 script:
-  - npm run pack-win
+  - npm run dist
   - pwd
   - ls -ltr .
-  - zip -r archive.zip ./dist
+  - zip -r archive.zip ./release-builds
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]];  npm run pack-win ; pwd ; ls -ltr .; zip -r win-archive.zip ./dist; fi
 
   
 deploy:
@@ -61,4 +51,3 @@ deploy:
   skip_cleanup: true
   all_branches: true
   overwrite: true
- 
