--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
   - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
   - git tag $TRAVIS_TAG
   
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo dpkg --add-architecture i386wget -qO - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -; sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ xenial main'; sudo apt-get update; sudo apt-get install --install-recommends winehq-stable; wine --version; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo dpkg --add-architecture i386; wget -qO - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -; sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ xenial main'; sudo apt-get update; sudo apt-get install --install-recommends winehq-stable; wine --version; fi
   
    
 script:
@@ -39,7 +39,7 @@ script:
   - pwd
   - ls -ltr .
   - zip -r archive.zip ./release-builds
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]];  npm run pack-win ; pwd ; ls -ltr .; zip -r win-archive.zip ./dist; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then npm run pack-win ; pwd ; ls -ltr .; zip -r win-archive.zip ./dist; fi
 
   
 deploy:
