Multi OS conditional release 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ deploy:
   file: "win-archive.zip"
   api_key: $semantic # Set in the settings page of your repository, as a secure variable
   on:
-  condition: $TRAVIS_OS_NAME == "linux"
+    condition: "$TRAVIS_OS_NAME = linux"
   repo: Kanna12/Semantic-version
   skip_cleanup: true
   all_branches: true
