Multi OS conditional release 3

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,17 +47,18 @@ deploy:
   file: "archive.zip"
   api_key: $semantic # Set in the settings page of your repository, as a secure variable
   on:
-  repo: Kanna12/Semantic-version
-  skip_cleanup: true
-  all_branches: true
-  overwrite: true
+      condition: "$TRAVIS_OS_NAME = osx"
+      repo: Kanna12/Semantic-version
+      skip_cleanup: true
+      all_branches: true
+      overwrite: true
 
   provider: releases
   file: "win-archive.zip"
   api_key: $semantic # Set in the settings page of your repository, as a secure variable
   on:
-    condition: "$TRAVIS_OS_NAME = linux"
-  repo: Kanna12/Semantic-version
-  skip_cleanup: true
-  all_branches: true
-  overwrite: true
+      condition: "$TRAVIS_OS_NAME = linux"
+      repo: Kanna12/Semantic-version
+      skip_cleanup: true
+      all_branches: true
+      overwrite: true
