--- a/.travis.yml
+++ b/.travis.yml
@@ -43,22 +43,22 @@ script:
 
   
 deploy:
-  provider: releases
-  file: "archive.zip"
-  api_key: $semantic # Set in the settings page of your repository, as a secure variable
-  on:
+    - provider: releases
+      file: "archive.zip"
+      api_key: $semantic # Set in the settings page of your repository, as a secure variable
+      on:
       condition: "$TRAVIS_OS_NAME = osx"
       repo: Kanna12/Semantic-version
       skip_cleanup: true
-      all_branches: false
+      all_branches: true
       overwrite: true
 
-  provider: releases
-  file: "win-archive.zip"
-  api_key: $semantic # Set in the settings page of your repository, as a secure variable
-  on:
+    - provider: releases
+      file: "win-archive.zip"
+      api_key: $semantic # Set in the settings page of your repository, as a secure variable
+      on:
       condition: "$TRAVIS_OS_NAME = linux"
       repo: Kanna12/Semantic-version
       skip_cleanup: true
-      all_branches: false
+      all_branches: true
       overwrite: true
