--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo dpkg --add-architecture i386; wget -qO - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -; sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ xenial main'; sudo apt-get update; sudo apt-get install --install-recommends winehq-stable; wine --version; fi
   
    
-script:
+# script:
   - npm run dist
   - pwd
   - ls -ltr .
