--- a/.travis.yml
+++ b/.travis.yml
@@ -34,12 +34,12 @@ install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo dpkg --add-architecture i386; wget -qO - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -; sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ xenial main'; sudo apt-get update; sudo apt-get install --install-recommends winehq-stable; wine --version; fi
   
    
-# script:
+script:
   - npm run dist
   - pwd
   - ls -ltr .
   - zip -r archive.zip ./dist
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then rm -rf dist; npm run pack-win ; pwd ; ls -ltr .; zip -r win-archive.zip ./dist; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then rm -rf dist && npm run pack-win && pwd && ls -ltr .&& zip -r win-archive.zip ./dist fi
 
   
 deploy:
